Finished BFS (untested)
Added the Node class to make multi-dim tree/linked list,
Finished the BFS and seems to be working.
NOTE: wordLadder is backwards